# hermes-agent-api-client

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v0.1.0-REQUIREMENTS.md
.planning/milestones/v0.1.0-phases/01-typed-hermes-api-client/: 01-SUMMARY.md  (+1 more)
.planning/phases/01-typed-hermes-api-client/: 01-CONTEXT.md  01-PLAN.md  01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-conversation-event-contract/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-REVIEWS.md  02-SECURITY.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/superpowers/plans/: 2026-07-15-hermes-agent-api-client-implementation.md  2026-07-15-import-v0.1.0-gsd-baseline.md  2026-07-16-capability-identity-contract-implementation.md
docs/superpowers/specs/: 2026-07-14-hermes-agent-api-client-design.md  2026-07-16-capability-identity-contract-design.md  2026-07-17-conversation-contract-design.md
scripts/: check_phase2_provenance.py  verify_dist.py
src/hermes_agent_api_client/: __init__.py  client.py  models.py  protocol.py  sse.py
tests/: __init__.py  test_client_lifecycle.py  test_fixture_provenance.py  test_package.py  test_phase2_provenance.py  test_protocol.py  test_sse.py  test_transport.py
tests/helpers/: __init__.py  hermes.py
(+8 files in other folders)
